# LittleLLM

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
demo/: kllm_demo.cpp
include/kllm/base/: device.h  half.h  quantize.h  tensor.h
include/kllm/model/: config.h  llama.h  weights.h
include/kllm/op/: cpu_ops.h  cuda_ops.h  ops.h
include/kllm/op/detail/: cpu_helpers.h  cuda_helpers.cuh
include/kllm/sampler/: sampler.h
scripts/: build_cpu.sh  build_cuda.sh  test_cpu.sh  test_cuda.sh
src/base/: half.cpp  tensor.cpp
src/model/: llama.cpp  weights.cpp
src/op/: dispatch.cpp
src/op/cpu/: add.cpp  attention.cpp  embedding.cpp  kv_cache.cpp  matmul.cpp  quantize.cpp  rms_norm.cpp  rope.cpp  silu.cpp
src/op/cuda/: add.cu  attention.cu  embedding.cu  kv_cache.cu  matmul.cu  quantize.cu  rms_norm.cu  rope.cu  silu.cu
src/sampler/: sampler.cpp
tests/: test_add_bias.cpp  test_attention.cpp  test_embedding.cpp  test_half.cpp  test_kv_cache.cpp  test_matmul.cpp  test_ops.cpp  test_quantize.cpp  test_rms_norm.cpp  test_rope.cpp  test_sampler.cpp  test_select_last_row.cpp  test_silu.cpp  test_utils.h
tools/: chat_tokenizer.py  download_model.py  export_hf.py
